--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,10 @@
 name: Run Pytest Tests
 
 on:
+push:                    # Run on push to any branch
+    branches: [ main ]
+  pull_request:            # Run on PRs targeting main
+    branches: [ main ]
   workflow_dispatch:   # Manual run button
   schedule:
     - cron: '0 13 * * *'  # Daily at 9:00 AM Eastern (13:00 UTC)
